microservice/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-microservice
      version: v1
  template:
    metadata:
      labels:
        app: login-microservice
        version: v1
    spec:
      containers:
        - name: login-microservice
          image: login-microservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management-microservice
      version: v1
  template:
    metadata:
      labels:
        app: user-management-microservice
        version: v1
    spec:
      containers:
        - name: user-management-microservice
          image: user-management-microservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-management-microservice
      version: v1
  template:
    metadata:
      labels:
        app: order-management-microservice
        version: v1
    spec:
      containers:
        - name: order-management-microservice
          image: order-management-microservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
