microservice/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-microservice
  labels:
    app: login-microservice
spec:
  selector:
    app: login-microservice
  ports:
    - port: 8081
      targetPort: 8081
      name: http
apiVersion: v1
kind: Service
metadata:
  name: user-management-microservice
  labels:
    app: user-management-microservice
spec:
  selector:
    app: user-management-microservice
  ports:
    - port: 8082
      targetPort: 8082
      name: http
apiVersion: v1
kind: Service
metadata:
  name: order-management-microservice
  labels:
    app: order-management-microservice
spec:
  selector:
    app: order-management-microservice
  ports:
    - port: 8083
      targetPort: 8083
      name: http
